--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="title"></div>
-    <div id="form"></div>
+    <div id="divform"></div>
     <script src="bundle.js"></script>
 </body>
 </html>
