--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -7,6 +7,7 @@
     <title>GroupTeams Project</title>
 </head>
 <body>
+    <h1>Works!</h1>
     <div id="title"></div>
     <div id="divform"></div>
     <script src="bundle.js"></script>
